# deeptechnic

./: .gitignore  01-deeptechnic-definition.md  02-workflow-rules.md  Aptisens_Ltd_背调报告.md  Deeptechnic_系统介绍.pptx  IDENTITY.md  MEMORY.md  Makefile  README.md  USER.md  evaluation-framework.md  generate_improved_report.py  generate_report.py  package-lock.json  pyproject.toml  skillopt-config.yml  skills-index.md  北京玻色量子科技股份有限公司_背调报告.md
.github/workflows/: test.yml
.learnings/: ERRORS.md  LEARNINGS.md
.openclaw/: workspace-state.json
agents/: supply-chain-analyst.md  team-evaluator.md
memory/: 2026-05-14.md  2026-05-15.md  2026-05-20.md  2026-05-21.md  2026-05-22.md  2026-05-27.md  2026-06-01.md  2026-06-02.md  2026-06-16.md  2026-06-17.md
projects/: 项目注册表.md
projects/脉冲红外项目/: 轮次1-初步评估.md  轮次1-向团队提问清单.md  项目基本信息.md
references/: competitor-comparison.md  supply-chain-framework.md  team-assessment-template.md
release/v1.0.0/: 01-deeptechnic-definition.md  Dockerfile  LICENSE  README.md  SKILL.md  requirements.txt
reports/2026-05-20-micro-oled-初评-eb80/: generate-docx.js  plan.json  report.md  request.md  synthesis.md
reports/2026-05-22-脉冲红外初评-eeea/: 轮次1-向团队提问清单.md
reports/2026-05-26-低空巡航无人机-芜湖广土科技-初评-feee/: gen-report-v2.py  gen-report.js  gen-report.py  plan.json  request.md  (+1 more)
scripts/: check_quality_gate.py  classify_signal.py  validate_training_data.py
skillopt-integration/: .env.example  SKILLOPT_INTEGRATION_PLAN.md  agent-skills分析报告.md  run_skillopt.py  系统深度融合方案.md
tests/: conftest.py  test_check_quality_gate.py  test_classify_signal.py
(+52 files in other folders)
